deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erdem-app
spec:
  replicas: 2 # Buraya dikkat! Birazdan bunu değiştireceğiz.
  selector:
    matchLabels:
      app: erdem-app
  template:
    metadata:
      labels:
        app: erdem-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        ports:
        - containerPort: 80
